# CGI_web_server

./: CMakeLists.txt  README.md  cgi.h  form_not_found_response.cpp  form_response.cpp  form_static_response.cpp  get_mime.cpp  main.cpp  parse.cpp
